[package]
name = "kkillrs"
version = "0.1.0"
edition = "2021"

[profile.release]
strip = "symbols"
panic = "abort"
opt-level = "z"
lto = true

[dependencies]
anyhow = "1.0.79"

[dependencies.windows]
version = "0.52"
features = [
    "Win32_Foundation",
    "Win32_Security",
    "Win32_Storage_FileSystem",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Diagnostics_ProcessSnapshotting",
    "Win32_System_Kernel",
    "Win32_System_IO",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Diagnostics_ToolHelp",
]
